--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^8.4.6",
+    "@react-navigation/bottom-tabs": "^5.10.6",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
     "expo": "~39.0.2",
@@ -17,7 +18,7 @@
     "expo-font": "~8.3.0",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
-    "formik": "^2.2.1",
+    "formik": "^2.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
@@ -31,6 +32,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.9.0",
+    "react-navigation-tabs": "^2.10.1",
     "yup": "^0.29.3"
   },
   "devDependencies": {
