--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "expo": "~39.0.2",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
+    "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "~1.0.2",
     "firebase": "7.9.0",
     "formik": "^2.2.3",
@@ -26,6 +27,7 @@
     "react-native-firebase": "^5.6.0",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
+    "react-native-paper": "^4.3.1",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
