--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^8.4.6",
+    "@react-native-firebase/firestore": "^7.9.1",
     "@react-navigation/bottom-tabs": "^5.10.6",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
@@ -18,7 +19,7 @@
     "expo-font": "~8.3.0",
     "expo-google-app-auth": "^8.1.3",
     "expo-status-bar": "~1.0.2",
-    "firebase": "7.9.0",
+    "firebase": "^8.0.1",
     "formik": "^2.2.3",
     "react": "16.13.1",
     "react-dom": "16.13.1",
@@ -35,7 +36,8 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.9.0",
     "react-navigation-tabs": "^2.10.1",
-    "yup": "^0.29.3"
+    "yup": "^0.29.3",
+    "@react-native-community/async-storage": "~1.12.0"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
