--- a/package.json
+++ b/package.json
@@ -8,13 +8,14 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^8.4.6",
     "@react-native-firebase/firestore": "^7.9.1",
     "@react-navigation/bottom-tabs": "^5.10.6",
     "@react-navigation/native": "^5.8.0",
     "@react-navigation/stack": "^5.10.0",
-    "expo": "~39.0.2",
+    "expo": "^39.0.5",
     "expo-constants": "~9.2.0",
     "expo-font": "~8.3.0",
     "expo-google-app-auth": "^8.1.3",
@@ -36,8 +37,7 @@
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.9.0",
     "react-navigation-tabs": "^2.10.1",
-    "yup": "^0.29.3",
-    "@react-native-community/async-storage": "~1.12.0"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
