--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@react-native-community/async-storage": "~1.12.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-native-firebase/app": "^8.4.6",
     "@react-native-firebase/firestore": "^7.9.1",
@@ -32,12 +33,12 @@
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "~0.13.12",
     "react-navigation": "^4.4.3",
     "react-navigation-stack": "^2.9.0",
     "react-navigation-tabs": "^2.10.1",
-    "yup": "^0.29.3",
-    "@react-native-community/async-storage": "~1.12.0"
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0"
