--- a/package.json
+++ b/package.json
@@ -25,9 +25,12 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-animated-message": "^1.0.2",
     "react-native-elements": "^3.0.0-alpha.1",
     "react-native-firebase": "^5.6.0",
+    "react-native-flash-message": "^0.1.17",
     "react-native-gesture-handler": "~1.7.0",
+    "react-native-gifted-chat": "^0.16.3",
     "react-native-keyboard-aware-scroll-view": "^0.9.3",
     "react-native-paper": "^4.3.1",
     "react-native-reanimated": "~1.13.0",
